appdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: "env-b"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: CONTAINER_IMAGE
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
      nodeSelector:
        nodegroup-type: frontend-workloads
---
apiVersion: v1
kind: Service
metadata:
  name: "app"
  namespace: "env-b"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "app"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "app"
  namespace: "env-b"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "app"
              servicePort: 80
---
