consolidated_deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tenanttwonamespace

---
apiVersion: v1
kind: Service
metadata:
  name: tenant2app
  namespace: tenanttwonamespace
spec:
  selector:
    app: tenant2app
  type: NodePort
  ports:
    -  protocol: TCP
       port: 80
       targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant2app
  labels:
    app: tenant2app
  namespace: tenanttwonamespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tenant2app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tenant2app
    spec:
      containers:
        - image: CONTAINER_IMAGE
          imagePullPolicy: Always
          name: tenant2app
          resources:
            requests:
              cpu: 200m
              memory: 0.5Gi
            limits:
              cpu: 400m
              memory: 1Gi
          ports:
            - containerPort: 8080
              protocol: TCP
      nodeSelector:
        nodegroup-type: frontend-workloads-aw
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tenant1-ingress
  namespace: tenanttwonamespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=14400
  labels:
    app: tenant1-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: tenant2app
              servicePort: 80
